Mass update for TR
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108262 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/tr/download.lang
+++ b/tr/download.lang
@@ -35,6 +35,6 @@ Sizi ilk sıraya koyan <em>tek tarayıcıya hoş geldiniz.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox Web Tarayıcısı
 
 
