--- a/tr/foundationsection.lang
+++ b/tr/foundationsection.lang
@@ -59,7 +59,7 @@ Denetimden Geçmiş 2010 Mali Tabloları
 
 
 ;2010 Form 990
-2010 Form 990
+2010 Form 990 {ok}
 
 
 ;Celebrating Firefox
@@ -75,11 +75,11 @@ Mozilla Buluşması, Brezilya
 
 
 ;Arabic Mozilla
-Arabic Mozilla
+Arabic Mozilla {ok}
 
 
 ;Mozilla Kenya
-Mozilla Kenya
+Mozilla Kenya {ok}
 
 
 ;Mozilla Indonesia
