--- a/tr/newsletter.lang
+++ b/tr/newsletter.lang
@@ -66,7 +66,7 @@ Your newsletter subscription has been confirmed.
 
 
 ;Format
-Format
+Biçim
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
@@ -78,11 +78,11 @@ Want to get the most relevant info? Tell us a little more about yourself. And wh
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Siz
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Diğer Bültenlerimiz:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
@@ -90,7 +90,7 @@ Get the latest tips and tricks for getting the most out of your favorite browser
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobil
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -98,7 +98,7 @@ Learn about the hottest new add-ons and features for Firefox mobile.
 
 
 ;Beta News
-Beta News
+Beta Haberleri
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
@@ -170,7 +170,7 @@ I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 
 
 ;Submit
-Submit
+Gönder
 
 
 ;Thanks for telling us why you’re leaving.
@@ -178,7 +178,7 @@ Thanks for telling us why you’re leaving.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla Bültenleri
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
