--- a/tr/snippets.lang
+++ b/tr/snippets.lang
@@ -82,66 +82,66 @@ Android tabletinize Firefox'u indirin, web'in gücünü ellerinizde tutun. <a hr
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Firefox Beta'yı indirin</a>, geri bildirimde bulunun ve bir sonraki Firefox'un 450 milyon kişi için daha da şahane olmasına yardımcı olun.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Özellikleri test edin, düzeltin ve güzelleştirin, bir sonraki sürümümüzün her zamankinden daha iyi olmasına yardım edin. <a href="%">Firefox Beta'yı hemen indirin!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Firefox'u seviyor musunuz? Yeni sürümümüzün daha da iyi olmasına yardım etmek ister misiniz? <a href="%">Firefox Beta'yı indirin</a> ve geri bildirimlerinizi paylaşın!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+En yeni Firefox Beta'yı denediniz mi? <a href="%">Şimdi indirin</a> ve en son özellikleri test etmemize yardımcı olun.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+En yeni Firefox Beta'yı kullanmıyor musunuz? Bir sonraki sürümde neler üzerinde çalıştığımızı görmek isterseniz <a href="%">şimdi indirin</a>.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Yorumlarınızı paylaşmak ister misiniz? <a href="%">Nasıl yapacağınızı öğrenin</a> ve Firefox'un bir sonraki sürümünü daha da şahane yapmamızı sağlayın.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox Beta kullanıcıları: Gelecek sürümde yapacağımız ince ayarlar için <a href="%">geri bildirimde bulunmayı</a> unutmayın.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Firefox'un gelecek sürümünü daha da şahane yapmamıza yardımcı olun. <a href="%">Kardeşimiz olun</a> ve Firefox Beta'yı arkadaşlarınızla paylaşın.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Gelecek Firefox özelliklerini görmeleri için arkadaşlarınızı davet edin. <a href="%">Kardeşimiz olun</a> ve Firefox Aurora'yı paylaşın.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Firefox'u birkaç bilgisayarda mı kullanıyorsunuz? Artık eklentilerinizi de tüm bilgisayarlarınızda eşitleyebilirsiniz. <a href="%">Sync'i nasıl etkinleştireceğinizi öğrenin.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Hızlı, hızlı, hızlı. <a %s>Android için Firefox baştan sonra yenilendi</a>. Tanıtmamıza yardımcı olun.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox'ta işlerinizi daha da hızlı tamamlamanızı sağlayacak yeni özellikler var! <a href="%">Bilgi almak için videoyu izleyin.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Firefox Beta'yı seviyor musunuz? Yakında Firefox'a gelecek şeyleri görmeleri için <a href="%s">arkadaşlarınızı davet edin</a>.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Yakında Firefox'a gelecek en son özellikleri ve yenilikleri denemek için Firefox Beta'yı kullanıyorum. <a href="%s">Siz de deneyin</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Firefox Beta'yı kullanarak Firefox'u daha şahane yaptığınız için teşekkürler. Şimdi denemeleri için <a href="%s">arkadaşlarınızı da davet edin</a>.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+En son özellikleri test etmek için Firefox Beta'yı kullanıyorum, sayemde Firefox daha da şahane oluyor. <a href="%s">Siz de deneyin</a>.
 
 
