--- a/tr/firefoxtesting.lang
+++ b/tr/firefoxtesting.lang
@@ -14,7 +14,7 @@ Firefox'un gelecek sürümlerini indirip test edin. Aurora veya Beta sürümleri
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
