--- a/tr/main.lang
+++ b/tr/main.lang
@@ -408,11 +408,11 @@ Desteklenen aygıtlar
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Neler yeni?
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Gizlilik
 
 
