Wolof: update to 100%
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108285 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/main.lang
+++ b/wo/main.lang
@@ -403,16 +403,14 @@ Yeesal leegi
 
 
 ;Supported Devices
-Aparey yi and
+Aparey yi mën ànd
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Yan xew xew
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
-
-
+Dundu biir
