--- a/wo/whatsnew.lang
+++ b/wo/whatsnew.lang
@@ -1,6 +1,4 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
 Waaw! Sa Firefox yees na.
 
@@ -62,38 +60,36 @@ Robot Android ñi ngi ko dippee ci liggeey bu <a href="%s">bokk ak Google</a> te
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Am Firefox pur Android</a> mooy am katanu Web ci say loxo. Gaaw na, muus te wóor!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Amal léegi sa joowkat mobil
 
 
 ;Firefox Features
-Firefox Features
+Melokaani Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Dalal jamm ci Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ndimmal ci Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox ngir Android artwork
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Gaaw. Muus. Wóor.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
-
+Am joowkat mobil
