Wolof: include comments from en-GB
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108286 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/home.lang
+++ b/wo/home.lang
@@ -1,3 +1,4 @@
+# common strings for all pages
 ;Personalize
 Solal
 
@@ -26,6 +27,7 @@ Nous avons votre retour.
 Amal Firefox ci sa telefon!
 
 
+# Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 ;Made for sharing.
 Li ngir seddoo.
 
@@ -42,6 +44,7 @@ Solal <br/> ngir mu <br/> gëna gaaw
 Jëlal ay mottali <br/> li ngay def <br/> gëna yomb
 
 
+# Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 ;Works harder so <br /> you don't have to.
 Liggéey bu metti <br /> doo too ko def.
 
@@ -58,6 +61,7 @@ Yomb na <br/> agg ci koñ yi
 Meññalin <br/> add-ons
 
 
+# Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 ;Made for <br/> the way you play.
 Dañu ko defar <br/> mu dëppoo ni ngay defe.
 
@@ -70,6 +74,7 @@ Dañu ko defar <br/> mu dëppoo ni ngay defe.
 Gëna <br/> wóor
 
 
+# Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 ;Effortless <br/> customization
 Jéem <br/> solal
 
@@ -78,6 +83,7 @@ Jéem <br/> solal
 Jëm kanam <br/> kaarange
 
 
+# Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 ;Advanced <br/> graphics
 Jëm kanam <br/> garafik
 
