--- a/wo/snippets.lang
+++ b/wo/snippets.lang
@@ -1,3 +1,4 @@
+# these text snippets are mostly used on about:home
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Jëlal Firefox fépp foo mëna dem! Firefox bu Android bu mujj pare na. <a href="%s">Mën nga ko am leegi.</a>.
 
