Occitan: update whatsnew.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108287 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/oc/whatsnew.lang
+++ b/oc/whatsnew.lang
@@ -1,24 +1,22 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Òsca ! Vòstre Firefox es a jorn.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Vòstre Firefox es pas a jorn.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Per de rasons de seguretat, vos recomandam de metre Firefox a jorn amb <a href="{url}">la tota darrièra version</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Utilizatz una version desconeguda de Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Per de rasons de seguretat, vos recomandam de telecargar <a href="{url}">la tota darrièra version</a>.
 
 
 ;Get to your next task<br/>faster than ever
@@ -26,19 +24,19 @@ Get to your next task<br/>faster than ever
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Descobrissètz cossí las novèlas foncionalitats de Firefox vos ajudan a navigar mai rapidament e mai eficaçament.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Ne saber mai sul <a href="{url}">novèl onglet foncion  »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Ne saber mai sus nòstra <a href="{url}">novèla pagina d'acuèlh  »</a>
 
 
 ;Keep in touch
-Keep in touch
+Demoratz en contacte
 
 
 ;Keep it moving
@@ -46,7 +44,7 @@ Keep it moving
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Obténer Firefox » <b>per Android</b>
 
 
 ;Keep it going
@@ -54,7 +52,7 @@ Keep it going
 
 
 ;Join Mozilla
-Join Mozilla
+Rejonhètz Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
@@ -70,16 +68,16 @@ Now get the mobile browser that’s got your back
 
 
 ;Firefox Features
-Firefox Features
+Foncionalitats de Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Benvenguda dins Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ajuda de Firefox
 
 
 # This is the alternate text for the Android image for blind people
@@ -95,5 +93,3 @@ Fast. Smart. Safe.
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
 Get the mobile browser that’s got your back.
-
-
