Occitan: various updates
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108288 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/oc/main.lang
+++ b/oc/main.lang
@@ -79,7 +79,7 @@ Nos contactar
 
 
 ;Site contact
-Contacte del sit
+Contacte del site
 
 
 ;Other languages:
@@ -87,7 +87,7 @@ Autras lengas :
 
 
 ;%Y-%m-%d
-%d/%m/%Y
+%d-%m-%Y
 
 
 ;All rights reserved.
@@ -151,7 +151,7 @@ Telecargar ara - Gratuit
 
 
 ;Return to top
-Tornar ennaut
+Tornar en naut
 
 
 ;You should <a href="http://get.adobe.com/flashplayer/">update Adobe Flash Player</a> right now.
@@ -211,7 +211,7 @@ Megaoctets
 
 
 ;FAQ
-FAQ
+FAQ {ok}
 
 
 ;Videos
@@ -243,27 +243,27 @@ Sincronizar vòstre ordenador e vòstre telefonet
 
 
 ;Learn More
-Ne saupre mai
+Ne saber mai
 
 
 ;Watch the video
-Watch the video
+Agachar la vidèo
 
 
 ;WebM format
-WebM format
+Format WebM
 
 
 ;Ogg Theora format
-Ogg Theora format
+Format Ogg Theora
 
 
 ;MPEG-4 format
-MPEG-4 format
+Format MPEG-4
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Ops ! Asseguratz-vos qu'avètzpicat una adreça electronica valida.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -279,63 +279,63 @@ Mobile
 
 
 ;Firefox Updated
-Firefox Updated
+Firefox mes a jorn
 
 
 ;Take a Look at Tomorrow's Web
-
+Take a Look at Tomorrow's Web
 
 
 ;Journey to the Future with Firefox
-
+Viatge cap al futur amb Firefox
 
 
 ;Join the Beta Program
-
+Rejonhètz lo programa Bèta
 
 
 ;Experience Firefox
-
+Fasètz l'experiéncia de Firefox
 
 
 ;The future of the Web is waiting for you!
-
+L'avenidor del web vos espèra !
 
 
 ;The future of the Web starts now.
-
+L'avenidor del web comença sulpic !
 
 
 ;Try Firefox with a fresh look and feel.
-
+Try Firefox with a fresh look and feel.
 
 
 ;Experience tomorrow's Web today.
-
+Fasètz l'experiéncia de l'internet de deman tre uèi.
 
 
 ;Check out the new look and feel of Firefox.
-
+Check out the new look and feel of Firefox.
 
 
 ;Browse the future of the Web.
-
+Percórrer l'avenidor del web.
 
 
 ;See Firefox with a new look and feel.
-
+See Firefox with a new look and feel.
 
 
 ;Download Beta Now.
-
+Telecargar la version Bèta ara.
 
 
 ;All Systems & Languages
-All Systems & Languages
+Totes los sistèmas e totas las lengas
 
 
 ;View Full Site
-View Full Site
+Vejatz lo site complet
 
 
 ;Get Firefox for Android
@@ -343,7 +343,7 @@ Get Firefox for Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Telecragament per <span>Android</span>
 
 
 ;Free from the Android Market
@@ -351,19 +351,19 @@ Free from the Android Market
 
 
 ;Desktop
-Desktop
+Burèu
 
 
 ;Firefox Beta for mobile
-Firefox Beta for mobile
+Firefox Beta per telefonet
 
 
 ;Firefox for mobile
-Firefox for mobile
+Firefox Beta per telefonet
 
 
 ;Email
-Email
+Adreça electronica
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
@@ -379,7 +379,7 @@ Stunning graphics
 
 
 ;The latest technologies
-The latest technologies
+La totas darrièras tecnologias
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
@@ -395,24 +395,22 @@ You're using an older version of Firefox. Get <a href="%s">your update</a> to st
 
 
 ;Upgrade now
-Upgrade now
+Metre a jorn ara
 
 
 ;Update now
-Update now
+Metre a jorn ara
 
 
 ;Supported Devices
-Supported devices
+Supported Devices
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Qué de nòu
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
-
-
+Confidencialitat
