--- a/oc/snippets.lang
+++ b/oc/snippets.lang
@@ -1,8 +1,6 @@
 # these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
-Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now.</a>
+Prene Firefox pertot ont anatz ! Lo darrièr Firefox per Android es arribat e ne podètz profiechar. <a href="%s">Obtenètz-lo tre ara</a>.
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
@@ -143,5 +141,3 @@ Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
 I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-
-
