--- a/oc/upgradedialog.lang
+++ b/oc/upgradedialog.lang
@@ -1,17 +1,13 @@
-# The strings in this file are for the upgrade dialog that is periodically displayed by Firefox to incitate users to upgrade
-
-
-
 ;Get the Newest Firefox
-Get the Newest Firefox
+Obtenètz lo novèl Firefox
 
 
 ;The Newest Firefox is Here!
-The Newest Firefox is Here!
+Lo tot novèl Forefox es arribat !
 
 
 ;<a %s>Quick, easy and free update</a>
-<a %s>Quick, easy and free update</a>
+<a %s>Rapid, aisit e gratuit</a>
 
 
 ;Fresh new look
@@ -19,10 +15,76 @@ Fresh new look
 
 
 ;Much faster than Firefox 3.6
-Much faster than Firefox 3.6
+Plan mai rapid que Firefox 3.6
 
 
 ;More awesomeness than ever
 More awesomeness than ever
 
 
+;There’s a new version of Firefox that can better protect you against online attacks.
+There’s a new version of Firefox that can better protect you against online attacks.
+
+
+;<a %s>Get the upgrade</a> — it’s fast & free!
+<a %s>Telecargatz la mesa a jorn</a> — es rapid & gratuit !
+
+
+;get the latest in security
+get the latest in security
+
+
+;experience faster performance
+experience faster performance
+
+
+;enjoy greater customization
+enjoy greater customization
+
+
+;Your version of Firefox will soon be vulnerable to online attacks.
+Your version of Firefox will soon be vulnerable to online attacks.
+
+
+;Stay safe online
+Stay safe online
+
+
+;Enjoy new features
+Enjoy new features
+
+
+;URGENT!
+URGENT !
+
+
+;Your version of Firefox is no longer protected against online attacks.
+Your version of Firefox is no longer protected against online attacks.
+
+
+;This is your last reminder before you will be automatically updated to the latest version
+This is your last reminder before you will be automatically updated to the latest version
+
+
+;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+
+
+;We recommend:
+Recomandam :
+
+
+;Upgrading your <a %s>operating system</a>
+Metètz a jorn vòstre <a %s>sistèma operatiu</a>
+
+
+;Downloading a compatible browser
+Telecargament d'un navigador compatible
+
+
+;Installing a free upgrade to your <a %s>operating system</a>
+Installacion de la mesa a jorn gratuita de vòstre <a %s>sistèma operatiu</a>
+
+
+;You will be prompted once more before being automatically updated.
+Vos serà demandat tornarmai abans d'èsser mes a jorn automaticament.
