--- a/oc/newsletter.lang
+++ b/oc/newsletter.lang
@@ -1,40 +1,38 @@
 # These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
-
-
 ;Get Monthly News
-Get Monthly News
+Recebètz de nòvas cada mes
 
 
 ;Your Email Address
-Your Email Address
+Vòstra adreça electronica
 
 
 ;Text
-Text
+Tèxte
 
 
 ;Available Languages
-Available Languages
+Lengas disponiblas
 
 
 ;Select country
-Select country
+Seleccionatz un país
 
 
 ;Whoops! Be sure to enter a valid email address.
-Whoops! Be sure to enter a valid email address.
+Ops ! Verificatz qu'avètz plan picat una adreça electronica valida.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Please read the Mozilla Privacy Policy and agree by checking the box.
+Legissètz la politica de proteccion de la vida privada de Mozilla e balhatz vòstre acòrd en marcant la casa.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
-I agree to the <a href="%s">Privacy Policy</a>
+Aprovi  la<a href="%s">Politica de proteccion de la vida privada</a>
 
 
 ;Sign me up!
-Sign me up!
+Inscrivissètz-me !
 
 
 ;We will only send you Mozilla-related information.
@@ -42,7 +40,7 @@ We will only send you Mozilla-related information.
 
 
 ;Thanks for Subscribing!
-Thanks for Subscribing!
+Mercé per vòstra inscripcion !
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
@@ -62,11 +60,11 @@ Read all about it in our <span>newsletter</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Vòstra inscripcion a la letra de difusion es estada confirmada.
 
 
 ;Format
-Format
+Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
@@ -78,15 +76,15 @@ Want to get the most relevant info? Tell us a little more about yourself. And wh
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Vos
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Nòstras autras letras de difusion :
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Obténer los darrièrs conselhs e astúcias per traire lo melhor partit de vòstre navigador favorit.
 
 
 ;Firefox Mobile
@@ -106,55 +104,55 @@ Read about the latest features for Firefox desktop and mobile before the final r
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Siam Amics !
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox es tanben sus vòstres sites de rets socialas favoridas. Se connectar amb nosautres e se jónher a la conversacion.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Gerir vòstras <span>Inscripcions a las letras de difusion</span>
 
 
 ;Subscribe
-Subscribe
+S'inscriure
 
 
 ;Unsubscribe
-Unsubscribe
+Se desinscriure
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marcatz aicí se volètz èsser levat de totes los mandadisses de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Me levar de totes los mandadisses de Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Salvar las preferéncias
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Mercé de metre a jorn vòstras preferéncias email.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Sètz estat desinscrich.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Sèm desolats de vos veire partir. Nos poiriatz dire perqué nos quitatz ?
 
 
 ;You send too many emails.
-You send too many emails.
+Mandatz tròp de corrièrs electronics.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Vòstre contengut me conveniá pas.
 
 
 ;Your email design was too hard to read.
@@ -162,7 +160,7 @@ Your email design was too hard to read.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Me soi pas inscrich per aquò.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
@@ -170,19 +168,19 @@ I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 
 
 ;Submit
-Submit
+Sometre
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Mercé de nos dire perqué partissètz.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Las letras de difusion de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Mercé ! Consultats vòstra bóstia de corrièr per confirmar vòstra inscripcion.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
@@ -190,6 +188,4 @@ You'll receive an email from mozilla@e.mozilla.org to confirm your subscription.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+Asseguratz-vos qu'avètz apondut nòstra adreça de mandadís : mozilla@e.mozilla.org a vòstre quasernet d'adreças per èsser segur que poirem totjorn d'aténher vòstra bóstia de recepcion.
