--- a/fr/mozorg/contribute.lang
+++ b/fr/mozorg/contribute.lang
@@ -1,180 +1,179 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Get Involved: Volunteer Opportunities at Mozilla
+Rejoignez-nous&nbsp;: voici les possibilités de contributions bénévoles pour Mozilla
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Cette vidéo nécessite un navigateur prenant en charge la vidéo ouverte (« open video ») ou  <a href="http://www.adobe.com/go/getflashplayer">le lecteur Adobe Flash</a>.
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
+Pas besoin d'être un as du C++ (ni même de savoir ce que ça peut bien vouloir dire) pour contribuer.<br><b>Il vous suffit d'aimer le Web.</b>
 
 
 ;Please enter a valid email address.
-Please enter a valid email address.
+Veuillez indiquer une adresse électronique valide.
 
 
 ;You must agree to the privacy policy.
-You must agree to the privacy policy.
+Vous devez accepter la politique de confidentialité.
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Veuillez choisir un domaine qui vous intéresse.
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+Merci de nous en dire plus sur vos centres d'intérêt.
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Votre réponse au CAPTCHA n'est pas correcte. Veuillez réessayer.
 
 
 ;Want to help?
-Want to help?
+Vous voulez aider&nbsp;?
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+VOTRE ADRESSE ÉLECTRONIQUE ICI
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Valider&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Envoyez-nous un message et nous pourrons vous aiguiller tout de suite.
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+Salut, voilà ce qui m'intéresse…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+Je souhaiterais recevoir l'actualité des contributions par courriel
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Merci de nous avoir contactés.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Un Mozillien vous contactera bientôt pour vous donner plus d'informations. En attendant, naviguez parmi les possibilités de contribution ci-dessous.
 
 
 ;Find an opportunity
-Find an opportunity
+Découvrez les possibilités
 
 
 ;Sort By:
-Sort By:
+Trier par&nbsp;:
 
 
 ;Interest
-Interest
+Intérêt
 
 
 ;Location
-Location
+Localisation
 
 
 ;Newsletter
-Newsletter
+Lettre d'informations
 
 
 ;Helping Users
-Helping Users
+Aide aux utilisateurs
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
+Vous aimeriez aider les autres à mieux utiliser Firefox et les autres projets Mozilla&nbsp;? Notre programme d'aide aux utilisateurs s'appuie sur des contributeurs aussi enthousiastes que vous.
 
 
-;Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
-Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
+;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
+Découvrez comment participer au <a href="https://support.mozilla.org/kb/superheroes-wanted">support utilisateur de Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> et <a href="http://www.mozilla.org/support/">d'autres projets Mozilla</a>.
 
 
-;You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+Vous pouvez aussi rejoindre notre <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> en aidant les utilisateurs sur Twitter.
 
 
 ;Quality Assurance
-Quality Assurance
+Assurance qualité
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
+Contribuer aux tests d'assurance qualité est l'un des points d'entrée les plus accessibles pour s'impliquer dans le projet Mozilla, et c'est très utile pour se familiariser avec notre code et nos outils.
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Aidez-nous à <a href="http://quality.mozilla.org/teams/desktop-firefox/">identifier des bogues</a> sur Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">tester les sites  Mozilla</a> ou découvrez d'autres <a href="http://quality.mozilla.org/">possibilités de tests</a>.
 
 
 ;Coding
-Coding
+Code
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
+<a href="https://developer.mozilla.org/en/Introduction">Les développeurs peuvent aider</a> Mozilla en ajoutant de nouvelles fonctionnalités, en rendant nos technologies plus agiles et rapides ou encore en facilitant les procédures de développement pour les autres contributeurs.
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
+De nombreux contributeurs sont présents sur <a href="http://irc.mozilla.org">IRC</a>, n'hésitez pas à venir y faire un tour et posez des questions pour en savoir plus. Nos sites Web sont eux aussi <a href="http://blog.mozilla.com/webdev/get-involved/">ouverts aux Mac Gyver du Web</a>.
 
 
 ;Spread the Word
-Spread the Word
+Passer le mot
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
+Parlez de Mozilla autour de vous&nbsp;! Racontez à votre entourage comment Firefox et les autres projets de Mozilla contribuent à un meilleur Internet. Partagez Firefox avec le monde en <a href="https://affiliates.mozilla.org">rejoignant notre programme d'affiliation</a> et jetez un œil à notre <a href="https://wiki.mozilla.org/MarketingGuide">Guide Marketing</a> pour découvrir d'autres moyens de vous impliquer.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Find out about <a href="/contribute/areas.html">more areas of interest…</a>
+Découvrez d'autres <a href="/contribute/areas.html">centres d'intérêt possibles…</a>
 
 
 ;map
-map
+carte
 
 
 ;US and Canada
-US and Canada
+USA et Canada
 
 
 ;Europe
-Europe
+Europe {ok}
 
 
 ;Latin America
 Latin America
 
 
+;Latin America
+Amérique latine
+
+
 ;Africa and the Middle East
-Africa and the Middle East
+Afrique et Moyen-Orient
 
 
 ;Asia and the South Pacific
-Asia and the South Pacific
+Asie et Pacifique Sud
 
 
 ;Antarctica
-Antarctica
+Antarctique
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Sign up for a weekly newsletter that is full of community news and contribution opportunities.
+Abonnez-vous à une lettre d'informations hebdomadaire pleine de nouvelles de la communauté et de possibilités de contribution.
 
 
 ;Thank you!
-Thank you!
+Merci&nbsp;!
 
-
-
-
-;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+Suivez ces liens pour en apprendre davantage sur l'aide aux utilisateurs de <a href="https://support.mozilla.org/fr/kb/benevoles-recherches">Firefox</a> et <a href="https://support.mozillamessaging.com/fr/kb/super-heros-recherches">Thunderbird</a>.
