l10n: add a new string for apps/partners
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108318 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/en-GB/marketplace/partners.lang
+++ b/en-GB/marketplace/partners.lang
@@ -62,3 +62,7 @@ Using open Web standards and Mozilla-designed APIs, great app experiences can be
 
 ;Test your app with a committed group of early adopters.
 Test your app with a committed group of early adopters.
+
+
+;View with subtitles
+View with subtitles
