--- a/es-AR/marketplace/partners.lang
+++ b/es-AR/marketplace/partners.lang
@@ -62,3 +62,7 @@ Al usar estándares web abiertos y APIs diseñadas por Mozilla, se pueden crear 
 
 ;Test your app with a committed group of early adopters.
 Probá tu aplicación con un grupo interesado de curiosos de la tecnología.
+
+
+;View with subtitles
+View with subtitles
