--- a/es-ES/marketplace/partners.lang
+++ b/es-ES/marketplace/partners.lang
@@ -62,3 +62,7 @@ El uso de estándares de la Web abierta y API diseñadas por Mozilla nos permite
 
 ;Test your app with a committed group of early adopters.
 Probar tu aplicación con un grupo comprometido de pioneros tecnológicos
+
+
+;View with subtitles
+View with subtitles
