--- a/fr/marketplace/partners.lang
+++ b/fr/marketplace/partners.lang
@@ -57,3 +57,5 @@ Créer une première base d'utilisateurs enthousiastes et augmenter sa popularit
 Viser les utilisateurs avancés.
 
 
+;View with subtitles
+Afficher une version sous-titrée de cette vidéo
