added line about subtitles
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108346 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/marketplace/partners.lang
+++ b/es-AR/marketplace/partners.lang
@@ -65,4 +65,4 @@ Probá tu aplicación con un grupo interesado de curiosos de la tecnología.
 
 
 ;View with subtitles
-View with subtitles
+Ver con subtítulos
