--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -178,7 +178,7 @@ Gracias por decirnos por qué prefieres desuscribirte.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Boletines de Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
