l10n:es-ES, update a string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108347 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/marketplace/partners.lang
+++ b/es-ES/marketplace/partners.lang
@@ -65,4 +65,4 @@ Probar tu aplicación con un grupo comprometido de pioneros tecnológicos
 
 
 ;View with subtitles
-View with subtitles
+Ver con subtítulos
