--- a/gl/mobile.lang
+++ b/gl/mobile.lang
@@ -131,6 +131,6 @@ Consulte todas as nosas canles para o móbil »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+De balde desde o Google Play Store
 
 
