--- a/gl/main.lang
+++ b/gl/main.lang
@@ -408,11 +408,11 @@ Dispositivos compatíbeis
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Novidades
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacidade
 
 
