[l10n-gl] updated snippets.lang file for www.mozilla.org (new beta snippets for all locales)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108374 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -130,18 +130,18 @@ Firefox ten novas características para facer a súa próxima tarefa aínda mái
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Gústalle o Firefox Beta? <a href="%s">Convide aos amigos</a> a descubrir as novidades que pronto traerá o Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Uso Firefox Beta para descubrir as últimas características e innovacións que pronto traerá o Firefox. <a href="%s">Compróbao</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Grazas por usar o Firefox Beta para axudarnos a facer o Firefox máis incríbel. Agora <a href="%s">convide aos amigos</a> a probalo.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Uso Firefox Beta para axudar a probar as últimas características e facer o Firefox máis incríbel. <a href="%s">Próbao</a>.
 
 
