[l10n-gl] updated whatsnew.lang file for www.mozilla.org (update Firefox whatsnew page strings to allow an android promo)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108375 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/whatsnew.lang
+++ b/gl/whatsnew.lang
@@ -62,38 +62,38 @@ O robot Android inspirouse nunha obra creada e compartida por <a href="%s">Googl
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Obteña o Firefox para Android</a> e poña o poder da Web nas súas mans. É rápido, intelixente e seguro!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Obteña agora o navegador móbil que o protexe
 
 
 ;Firefox Features
-Firefox Features
+Características do Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Benvida ao Firefox
 
 
 ;Firefox Help
-Firefox Help
+Axuda do Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Material gráfico do Firefox para Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rápido. Intelixente. Seguro.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Obteña o navegador móbil que o protexe.
 
 
