--- a/ast/whatsnew.lang
+++ b/ast/whatsnew.lang
@@ -62,38 +62,38 @@ Android Robot ye una reproducción de la obra creada y <a href="%s">compartida p
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Obtén Firefox para Android</a> y tol poder de la Web nes tos manes. ¡Ye rápidu, intelixente y seguru!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Faite agora col navegador móvil que te protexe
 
 
 ;Firefox Features
-Firefox Features
+Carauterístiques de Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Bienllegáu a Firefox
 
 
 ;Firefox Help
-Firefox Help
+Ayuda de Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Material gráficu de Firefox p'Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rápidu. Intelixente. Seguru.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Faite col navegador móvil que te protexe.
 
 
