Bug 752692 - Copy es-ES translations to es-MX and es-CL.
Also change 'Coming soon' translation to one without accents to help with the Lobster font character set.



git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108484 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-AR/marketplace/partners.lang
+++ b/es-AR/marketplace/partners.lang
@@ -5,7 +5,7 @@ Generá una base de fans pronto y ganá en popularidad.
 
 
 ;Opening Soon
-Se abrirá pronto
+Abre pronto
 
 
 ;Mozilla Marketplace Partners
