Telugu translation for what's new page and video
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@108551 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/te/videos/video_fx13.lang
+++ b/te/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[ఫైర్‌ఫాక్స్‌లో కొత్త విశేషాలు] సరికొత్త ఫైర్‌ఫాక్స్‌తో మీరు వెళ్ళాలనుకున్న చోటికి వెళ్ళడం ఇప్పుడు మరింత తేలిక మరియు వేగవంతం.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+నవీకరించబడిన హోమ్ పేజీతో సాధారణంగా ఉపయోగించే మెనూ ఎంపికలను ఇప్పుడు సులువుగా చేరుకోవచ్చు.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+దింపుకోళ్ళు, పేజీకలు, చరిత్ర, యాడాన్లు, సింక్ మరియు అమరికల వంటివి.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[కొత్త ట్యాబ్ పేజీ] దీనికి కూడా మెరుగులు దిద్దాం.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+కొత్త ట్యాబ్ పేజీతో, ఇటీవలే సందర్శించిన మరియు తరచూ సందర్శించే సైట్లను ఇప్పుడు ఒకే నొక్కుతో మీరు తేలికగా చేరుకోవచ్చు.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+ఈ కొత్త ట్యాబ్ పేజీని వాడుకోడానికి, మీ విహారిణిలో పైన ఉన్న '+'ను నొక్కి కొత్త ట్యాబుని సృష్టించండి.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+కొత్త ట్యాబ్ పేజీ ఇప్పుడు మీరు ఇటీవలే సందర్శించిన మరియు తరచూ సందర్శించే సైట్ల నఖచిత్రాలను చూపిస్తుంది.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+నఖచిత్రాలను కావలసిన చోటికి లాగివదిలి వాటి క్రమాన్ని మార్చుకోవడం ద్వారా మీరు ఈ కొత్త ట్యాబ్ పేజీని మీకు తగ్గట్టు తీర్చిదిద్దుకోవచ్చు.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+ఒక సైటుని ఒక చోట స్థిరంగా ఉంచడానికి పిన్ను బొత్తాన్ని నొక్కండి, లేదా సైటుని తొలగించడానికి 'X' బొత్తాన్ని నొక్కండి.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+ఖాళీ కొత్త ట్యాబ్ పేజీని తిరిగి పొందడానికి ఈ పేజీలో కుడివైపు పైన ఉన్న 'పట్టిక' ప్రతీకాన్ని నొక్కవచ్చు.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+ఇప్పుడే సరికొత్త ఫైర్‌ఫాక్స్‌ని తెచ్చుకుని నేటి నుండే ఈ కొత్త సౌలభ్యాలను ఉపయోగించుకోండి!
