--- a/te/whatsnew.lang
+++ b/te/whatsnew.lang
@@ -2,43 +2,43 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+హుర్రే! మీ ఫైర్‌ఫాక్స్ సరికొత్తదే.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+మీ ఫైర్‌ఫాక్స్ పాతబడింది.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+భద్రతా కారణాల వల్ల, <a href="{url}">సరికొత్త మరియు అత్యుత్తమ సంచిక</a>కు నవీకరించుకొమ్మని మేం సిఫారసు చేస్తున్నాం.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+మీరు గుర్తుతెలియని ఫైర్‌ఫాక్స్ సంచికను వాడుతున్నారు.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+భద్రతా కారణాల వల్ల, <a href="{url}">సరికొత్త మరియు అత్యుత్తమ సంచిక</a>ను దించుకొమ్మని మేం సిఫారసు చేస్తున్నాం.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+మీ తర్వాతి పనికి<br/>మునుపెన్నడూ లేనంత వేగంగా వెళ్ళండి
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+ఫైర్‌ఫాక్స్ లోని కొత్త సౌలభ్యాలు మీరు వేగంగా మరియు సమర్థవంతంగా విహరించడానికి ఎలా ఉపయోగపడతాయో చూడండి.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">కొత్త ట్యాబ్ సౌలభ్యం గురించి మరింత తెలుసుకోండి »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+<a href="{url}">కొత్తగా రూపొందించిన హోమ్ పేజీ గురించి మరింత తెలుసుకోండి »</a>
 
 
 ;Keep in touch
-Keep in touch
+టచ్‌లో ఉండండి
 
 
 ;Keep it moving
@@ -46,7 +46,7 @@ Keep it moving
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+<b>ఆండ్రాయిడ్‌లో</b> ఫైర్‌ఫాక్స్‌ను పొందండి »
 
 
 ;Keep it going
@@ -54,46 +54,46 @@ Keep it going
 
 
 ;Join Mozilla
-Join Mozilla
+మొజిల్లాలో చేరండి
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+ఆండ్రాయిడ్ రోబో <a href="%s">గూగుల్ సృష్టించి మరియు పంచుకున్న</a> కృతిపై ఆధారపడింది  మరియు <a href="%s">క్రియేటివ్ కామన్స్ 3.0 ఆపాదింపు లైసెన్సు</a>లో పేర్కొన్న నియమాల ప్రకారం ఉపయోగించబడింది.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">ఆండ్రాయిడ్‌లో ఫైర్‌ఫాక్స్‌ను పొందండి</a> ఇక జాలం యొక్క శక్తి మీ చేతుల్లో ఉంటుంది. వేగవంతం, చురుకైనది మరియు సురక్షితమైనది!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+మీ వెన్నుదన్నుగా ఉండే మొబైల్ విహారిణిని ఇప్పుడు పొందండి
 
 
 ;Firefox Features
-Firefox Features
+ఫైర్‌ఫాక్స్ సౌలభ్యాలు
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+ఫైర్‌ఫాక్స్‌కి స్వాగతం
 
 
 ;Firefox Help
-Firefox Help
+ఫైర్‌ఫాక్స్ సహాయం
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+ఆండ్రాయిడ్ కొరకు ఫైర్‌ఫాక్స్ చిత్రం
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+వేగవంతం. చురుకైనది. సురక్షితం.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+మీ వెన్నుదన్నుగా ఉండే మొబైల్ విహారిణిని పొందండి.
 
 
